[gd_scene load_steps=4 format=3 uid="uid://ctu66dkq5igff"]

[ext_resource type="Script" path="res://scenes/game/powerup/power_up.gd" id="1_mmn31"]
[ext_resource type="Texture2D" uid="uid://wn0s3ru2b0v5" path="res://scenes/game/powerup/+10 power.png" id="2_8drlx"]
[ext_resource type="Texture2D" uid="uid://c5hgwbn5xtpam" path="res://scenes/game/powerup/x2 power up.png" id="3_io2ps"]

[node name="PowerUp" type="Node2D"]
script = ExtResource("1_mmn31")
type = 0

[node name="FlatSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_8drlx")

[node name="MultSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("3_io2ps")
